--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "react-dom": "19.1.1",
     "react-icons": "^5.5.0",
     "react-scroll": "^1.9.0",
+    "react-tsparticles": "^2.12.2",
     "styled-components": "^6.1.15",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar-hide": "^4.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tsparticles": "^3.9.1"
   },
   "devDependencies": {
     "@types/node": "24.3.1",
