--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,60 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
+# ===============================
+# Dependencies
+# ===============================
+node_modules/
+.pnp
 .pnp.js
 .yarn/install-state.gz
 
-# testing
-/coverage
+# ===============================
+# Next.js build output
+# ===============================
+.next/
+out/
+build/
 
-# next.js
-/.next/
-/out/
+# ===============================
+# Testing
+# ===============================
+coverage/
 
-# production
-/build
+# ===============================
+# Environment files (VERY IMPORTANT)
+# ===============================
+.env
+.env.local
+.env.development
+.env.production
+.env*.local
 
-# misc
-.DS_Store
-*.pem
-
-# debug
+# ===============================
+# Logs
+# ===============================
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# local env files
-.env*.local
+# ===============================
+# OS / Editor files
+# ===============================
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
 
-# vercel
+# ===============================
+# Vercel
+# ===============================
 .vercel
 
-# typescript
+# ===============================
+# TypeScript
+# ===============================
 *.tsbuildinfo
 next-env.d.ts
+
+# ===============================
+# Misc / Security
+# ===============================
+*.pem
