--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.474.0",
+    "mongoose": "^9.0.2",
     "next": "^15.5.2",
     "react": "19.1.1",
     "react-dom": "19.1.1",
@@ -32,6 +33,7 @@
     "tsparticles": "^3.9.1"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.11.96",
     "@types/node": "24.3.1",
     "@types/react": "19.1.12",
     "eslint": "^8",
