--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.5.0",
     "react-scroll": "^1.9.0",
     "react-tsparticles": "^2.12.2",
+    "recharts": "^3.6.0",
     "styled-components": "^6.1.15",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
